# sticker

./: CMakeLists.txt  ChatMessage.h  ChatUser.h  Entities.cpp  Entities.h  LICENSE  README.md  StickerGenerator.cpp  StickerGenerator.h  main.cpp
